--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "build:static": "next build && next export"
+    "build:static": "next build"
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
