--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,29 +1,40 @@
 name: ma-landing
 region: nyc
 
-# Static site configuration for ultra-fast builds
-static_sites:
-- name: landing
+# Dynamic server configuration (not static)
+services:
+- name: web
   github:
     repo: nabbilkhan/MA-Landing
     branch: main
     deploy_on_push: true
 
-  # Build configuration
-  build_command: npm ci && npm run build:static
-  output_dir: out
+  # Build configuration for server-side rendering
+  build_command: npm ci && npm run build
+  run_command: npm start
 
-  # Environment
+  # Node.js environment
   environment_slug: node-js
+
+  # Instance configuration
+  instance_size_slug: basic-xxs
+  instance_count: 1
+  http_port: 3000
+
+  # Health check
+  health_check:
+    http_path: /
+    initial_delay_seconds: 30
+    period_seconds: 30
+    timeout_seconds: 10
+    success_threshold: 1
+    failure_threshold: 3
 
   # Routes
   routes:
   - path: /
 
-  # Error pages
-  error_document: 404.html
-
-  # CORS (if needed for API calls)
+  # CORS configuration for API calls
   cors:
     allow_origins:
     - prefix: https://app.mentoragile.com
@@ -39,8 +50,12 @@ static_sites:
     - Content-Type
     - Authorization
 
-  # Environment variables (minimal for static site)
+  # Environment variables
   envs:
+  - key: NODE_ENV
+    value: "production"
+  - key: PORT
+    value: "3000"
   - key: NEXT_PUBLIC_SITE_URL
     value: "https://mentoragile.com"
   - key: NEXT_PUBLIC_API_URL
