--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
-    "build:static": "next build"
+    "start": "next start -p 3000",
+    "lint": "next lint"
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
